<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/yellow"
    >
    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCambiarPesetas"
        android:textSize="30sp"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        >
        <RadioButton
            android:id="@+id/radBtnaEuros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radBtnPstaEu"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/radBtnaPesetas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radBtnEuAPst"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/txtAlerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/pregunta"
        android:textColor="@color/red"
        />
    <EditText
        android:id="@+id/editTxtMonedas"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/txtCantidad"
        android:inputType="number"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCambiar"
        android:text="@string/btnAceptar"
        />
    <TextView
        android:id="@+id/txtCambiodemoneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/pregunta"
        android:textColor="@color/red"
        />
</LinearLayout>